bisonflex/bif.output
Terminals unused in grammar

   QUOTE
   SHA256
   SHAKE256


Rules useless in parser due to conflicts

    7 bifoptions: INCLUDE COLON filename

    8 $@2: /* empty */


State 5 conflicts: 1 reduce/reduce
State 12 conflicts: 3 reduce/reduce
State 17 conflicts: 39 shift/reduce
State 18 conflicts: 39 shift/reduce
State 21 conflicts: 1 shift/reduce
State 39 conflicts: 1 reduce/reduce
State 58 conflicts: 1 shift/reduce
State 61 conflicts: 4 shift/reduce
State 87 conflicts: 4 shift/reduce
State 214 conflicts: 16 shift/reduce
State 339 conflicts: 17 shift/reduce
State 360 conflicts: 17 shift/reduce, 1 reduce/reduce
State 384 conflicts: 1 shift/reduce
State 396 conflicts: 72 reduce/reduce
State 398 conflicts: 72 reduce/reduce
State 483 conflicts: 12 shift/reduce
State 503 conflicts: 16 shift/reduce
State 521 conflicts: 1 shift/reduce
State 528 conflicts: 1 shift/reduce
State 534 conflicts: 1 shift/reduce


Grammar

    0 $accept: bif $end

    1 bif: group_list

    2 group_list: /* empty */
    3           | group_list bifoptions

    4 bifoptions: INCLUDE COLON filename

    5 $@1: /* empty */

    6 bifoptions: WORD $@1 COLON OBRACE file_list EBRACE
    7           | INCLUDE COLON filename

    8 $@2: /* empty */

    9 bifoptions: WORD $@2 COLON OBRACE file_list EBRACE

   10 file_list: /* empty */
   11          | file_list file_spec
   12          | file_list other_spec
   13          | file_list image_spec
   14          | file_list metahdr_spec
   15          | file_list new_pdi_spec
   16          | file_list new_file_spec
   17          | file_list partition_spec

   18 $@3: /* empty */

   19 metahdr_spec: METAHEADER OBRACE $@3 metahdr_attr_list EBRACE

   20 metahdr_attr_list: metahdr_attr
   21                  | metahdr_attr COMMA metahdr_attr_list
   22                  | metahdr_attr metahdr_attr_list

   23 metahdr_attr: /* empty */
   24             | ENCRYPTION EQUAL encrvalue
   25             | KEYSRC_ENCRYPTION EQUAL key_src
   26             | AES_KEY_FILE EQUAL filename
   27             | AUTHENTICATION EQUAL authvalue
   28             | PPK_FILE EQUAL filename
   29             | PSK_FILE EQUAL filename
   30             | SPK_FILE EQUAL filename
   31             | SSK_FILE EQUAL filename
   32             | SPK_SIGNATURE_FILE EQUAL filename
   33             | PRESIGN EQUAL filename
   34             | REVOKE_ID EQUAL expression
   35             | SPK_REVOKE_ID EQUAL expression
   36             | CHECKSUM EQUAL checkvalue
   37             | DPA_CM
   38             | BLOCKS EQUAL metahdr_blk
   39             | PUFHD_LOC

   40 optional_data: optional_data_attr
   41              | optional_data_attr SEMICOLON optional_data

   42 optional_data_attr: filename COMMA ID EQUAL expression
   43                   | /* empty */

   44 metahdr_blk: metahdr_blk_attr
   45            | metahdr_blk_attr SEMICOLON metahdr_blk

   46 metahdr_blk_attr: expression
   47                 | expression LPAREN expression RPAREN
   48                 | expression LPAREN ASTERISK RPAREN

   49 new_pdi_spec: ID EQUAL expression
   50             | PARENT_ID EQUAL expression
   51             | ID_CODE EQUAL expression
   52             | EXT_ID_CODE EQUAL expression
   53             | other_file_attr EQUAL filename
   54             | KEYSRC_ENCRYPTION EQUAL key_src
   55             | PARTITION_TYPE EQUAL ptypevalue
   56             | REVOKE_ID EQUAL expression

   57 image_spec: image_list
   58           | image_spec image_list

   59 $@4: /* empty */

   60 image_list: IMAGE OBRACE $@4 image_content EBRACE

   61 image_content: /* empty */
   62              | image_content image_attributes_list
   63              | image_content file_spec
   64              | image_content partition_spec

   65 image_attributes_list: image_attributes
   66                      | image_attributes COMMA image_attributes_list
   67                      | image_attributes image_attributes_list

   68 image_attributes: ID EQUAL expression
   69                 | NAME EQUAL WORD
   70                 | DELAY_HANDOFF
   71                 | DELAY_LOAD
   72                 | INIT
   73                 | COPY EQUAL expression
   74                 | PARTITION_TYPE EQUAL ptypevalue
   75                 | UNIQUE_ID EQUAL expression
   76                 | PARENT_UNIQUE_ID EQUAL expression
   77                 | FUNCTION_ID EQUAL expression
   78                 | PCR_NUMBER EQUAL expression
   79                 | PCR_MEASUREMENT_INDEX EQUAL expression

   80 partition_spec: PARTITION partition_content
   81               | partition_content

   82 partition_content: /* empty */
   83                  | partition_content file_spec
   84                  | partition_content new_file_spec

   85 other_spec: OBRACKET KEYSRC_ENCRYPTION EBRACKET key_src

   86 $@5: /* empty */

   87 other_spec: OBRACKET FSBL_CONFIG $@5 EBRACKET fsbl_attr_list
   88           | FSBL_CONFIG OBRACE fsbl_attr_list EBRACE
   89           | BOOT_DEVICE OBRACE sec_boot_attr_list EBRACE
   90           | OBRACKET BOOT_DEVICE EBRACKET boot_device_type
   91           | BOOT_DEVICE EQUAL boot_device_type
   92           | OBRACKET AUTH_PARAMS EBRACKET auth_parameters
   93           | OBRACKET SPLIT EBRACKET split_options
   94           | OBRACKET BOOTVECTORS EBRACKET bootvectors_list
   95           | AUTHJTAG_CONFIG OBRACE authjtag_attr_list EBRACE
   96           | OPTIONAL_DATA OBRACE optional_data EBRACE
   97           | LMS_KEY_PARAMS OBRACE lms_params_list EBRACE
   98           | LMS_KEY_PARAMS OBRACE lms_params_string_list EBRACE
   99           | LMS_KEY_PARAMS OBRACE lms_params_string_type_list EBRACE

  100 sec_boot_attr_list: sec_boot_attr
  101                   | sec_boot_attr COMMA sec_boot_attr_list

  102 sec_boot_attr: boot_device_type
  103              | IMAGE_STORE
  104              | ADDRESS EQUAL expression

  105 fsbl_attr_list: fsbl_attr
  106               | fsbl_attr COMMA fsbl_attr_list
  107               | fsbl_attr fsbl_attr_list

  108 authjtag_attr_list: authjtag_attr
  109                   | authjtag_attr COMMA authjtag_attr_list
  110                   | authjtag_attr authjtag_attr_list

  111 authjtag_attr: REVOKE_ID EQUAL expression
  112              | SPK_REVOKE_ID EQUAL expression
  113              | DEVICE_DNA EQUAL HEXWORD
  114              | JTAG_TIMEOUT EQUAL expression
  115              | AUTHJTAG_SIGN EQUAL filename

  116 fsbl_attr: core
  117          | bh_rsa
  118          | auth_hash
  119          | int_hash
  120          | pufhd_loc
  121          | auth_only
  122          | opt_key
  123          | PUF4KMODE
  124          | SHUTTER EQUAL expression
  125          | dpa_cm
  126          | SMAP_WIDTH EQUAL expression
  127          | BYPASS_IDCODE_CHECK
  128          | A_HWROT
  129          | S_HWROT
  130          | PUFROSWAP EQUAL expression
  131          | DICE

  132 $@6: /* empty */

  133 file_spec: OBRACKET $@6 attribute_list EBRACKET filename
  134          | filename

  135 $@7: /* empty */

  136 new_file_spec: OBRACE $@7 new_attribute_list EBRACE

  137 new_attribute_list: attribute
  138                   | new_attribute
  139                   | new_attribute COMMA new_attribute_list
  140                   | attribute COMMA new_attribute_list
  141                   | new_attribute new_attribute_list
  142                   | attribute new_attribute_list

  143 new_attribute: PFILE EQUAL filename
  144              | ID EQUAL expression
  145              | IMAGE_STORE EQUAL expression
  146              | PARTITION_TYPE EQUAL boolattr
  147              | PARTITION_TYPE EQUAL PMCDATA
  148              | BIF_SECTION EQUAL WORD

  149 attribute_list: attribute
  150               | attribute COMMA attribute_list

  151 attribute: boolattr
  152          | optattr
  153          | numattr
  154          | fileattr
  155          | blocksattr_list

  156 blocksattr_list: BLOCKS EQUAL blocksattr
  157                | AUTHBLOCKS EQUAL authblockattr

  158 blocksattr: blockattr
  159           | blockattr SEMICOLON blocksattr

  160 bootvectors_list: bootvector
  161                 | bootvector COMMA bootvectors_list

  162 bootvector: expression

  163 authblockattr: expression

  164 boolattr: BOOTLOADER
  165         | BOOT
  166         | USER
  167         | STATIC
  168         | NOAUTOSTART
  169         | MULTIBOOT
  170         | PROTECTED
  171         | EARLY_HANDOFF
  172         | HIVEC
  173         | XIP_MODE
  174         | INIT
  175         | BOOTIMAGE
  176         | key_file
  177         | other_files
  178         | ptypevalue
  179         | LOCKSTEP

  180 trustzone_type: TRUSTZONE
  181               | TRUSTZONE EQUAL TRUSTZONE_TYPE

  182 blockattr: expression
  183          | expression LPAREN expression RPAREN
  184          | expression LPAREN ASTERISK RPAREN

  185 optattr: AUTHENTICATION EQUAL authvalue
  186        | ENCRYPTION EQUAL encrvalue
  187        | CHECKSUM EQUAL checkvalue
  188        | PARTITION_OWNER EQUAL pownervalue
  189        | DEST_CPU EQUAL dest_cpu_type
  190        | DEST_DEVICE EQUAL dest_device_type
  191        | EXCEPTION_LEVEL EQUAL exception_level_type
  192        | AES_KEY_FILE EQUAL filename
  193        | PPK_FILE EQUAL filename
  194        | PSK_FILE EQUAL filename
  195        | SPK_FILE EQUAL filename
  196        | SSK_FILE EQUAL filename
  197        | SPK_SELECT EQUAL spkselect
  198        | SPK_ID EQUAL expression
  199        | SPK_SIGNATURE_FILE EQUAL filename
  200        | trustzone_type
  201        | PARTITION_TYPE EQUAL ptypevalue
  202        | KEYSRC_ENCRYPTION EQUAL key_src
  203        | REVOKE_ID EQUAL expression
  204        | SPK_REVOKE_ID EQUAL expression
  205        | DPA_CM
  206        | SLR_NUM EQUAL expression
  207        | CLUSTER_NUM EQUAL expression
  208        | PUFHD_LOC
  209        | DELAY_AUTH
  210        | TCM_BOOT

  211 other_file_attr: INIT
  212                | key_file
  213                | BH_KEK_IV
  214                | BH_KEY_IV
  215                | BBRAM_KEK_IV
  216                | EFUSE_KEK_IV
  217                | EFUSE_USER_KEK0_IV
  218                | EFUSE_USER_KEK1_IV
  219                | USER_KEYS

  220 authvalue: NONE
  221          | AUTHVALUE

  222 encrvalue: NONE
  223          | ENCRVALUE

  224 checkvalue: NONE
  225           | CHECKSUMVALUE

  226 pownervalue: POWNERVALUE

  227 ptypevalue: PTYPEVALUE

  228 key_src: KEY_SRC

  229 core: CORE

  230 bh_rsa: BH_RSA

  231 dpa_cm: DPA_CM

  232 auth_hash: AUTH_HASH

  233 int_hash: INT_HASH

  234 pufhd_loc: PUFHD_LOC

  235 opt_key: OPT_KEY

  236 auth_only: AUTH_ONLY

  237 boot_device_type: BOOT_DEVICE_TYPE

  238 dest_cpu_type: DEST_CPU_TYPE

  239 dest_device_type: DEST_DEVICE_TYPE

  240 exception_level_type: EXCEPTION_LEVEL_TYPE

  241 numattr: ALIGNMENT EQUAL expression
  242        | OFFSET EQUAL expression
  243        | RESERVE_LEGACY EQUAL expression
  244        | RESERVE EQUAL expression
  245        | LOAD EQUAL expression
  246        | STARTUP EQUAL expression
  247        | BIGENDIAN
  248        | A32_MODE
  249        | PARTITION_NUM EQUAL expression
  250        | TCM_A_REGION EQUAL expression
  251        | TCM_B_REGION EQUAL expression
  252        | TCM_C_REGION EQUAL expression

  253 fileattr: PRESIGN EQUAL filename
  254         | AC EQUAL filename
  255         | UDF_DATA EQUAL filename

  256 key_file: AES_KEY_FILE
  257         | rsa_key_file
  258         | SPK_SIGNATURE_FILE
  259         | BH_SIGNATURE_FILE
  260         | HEADER_SIGNATURE_FILE
  261         | BH_KEY_FILE
  262         | PUF_HELPER_FILE
  263         | BH_KEY_IV
  264         | FAMILY_KEY

  265 rsa_key_file: PPK_FILE
  266             | PSK_FILE
  267             | SPK_FILE
  268             | SSK_FILE

  269 other_files: PMUFW_IMAGE
  270            | PMCDATA
  271            | UDF_BH

  272 auth_parameters: PPK_SELECT EQUAL expression
  273                | SPK_SELECT EQUAL spkselect
  274                | SPK_ID EQUAL expression
  275                | HEADER_AUTH
  276                | auth_parameters SEMICOLON auth_parameters

  277 spkselect: SPKSELECT

  278 lms_params_list: lms_params_attr
  279                | lms_params_attr SEMICOLON lms_params_attr

  280 lms_params_attr: LMS_HASH EQUAL hashfunc
  281                | LMS_W EQUAL expression
  282                | LMS_H EQUAL expression

  283 hashfunc: HASH_FUNCTION

  284 lms_params_string_list: WORD
  285                       | lms_params_string_list COMMA lms_params_string_list

  286 $@8: /* empty */

  287 lms_params_string_type_list: AUTH_KEY_LEVEL OBRACE $@8 lms_params_string_list EBRACE
  288                            | lms_params_string_type_list lms_params_string_type_list

  289 split_options: SPLIT_MODE EQUAL splitmode
  290              | SPLIT_FMT EQUAL splitfmt
  291              | split_options COMMA split_options

  292 splitmode: SPLITMODE

  293 splitfmt: MCS
  294         | BIN

  295 filename: FILENAME
  296         | QFILENAME

  297 number: HEXVALUE
  298       | DECVALUE
  299       | LPAREN expression RPAREN

  300 unary_expression: number
  301                 | PLUS unary_expression
  302                 | NEGATION unary_expression

  303 multiplicative_expression: unary_expression
  304                          | multiplicative_expression MULT unary_expression
  305                          | multiplicative_expression DIVIDE unary_expression
  306                          | multiplicative_expression MODULO unary_expression

  307 additive_expression: multiplicative_expression
  308                    | additive_expression PLUS multiplicative_expression
  309                    | additive_expression MINUS multiplicative_expression

  310 shift_expression: additive_expression
  311                 | shift_expression LSHIFT additive_expression
  312                 | shift_expression RSHIFT additive_expression

  313 and_expression: shift_expression
  314               | and_expression AND shift_expression

  315 xor_expression: and_expression
  316               | xor_expression XOR and_expression

  317 expression: xor_expression
  318           | expression OR xor_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
OBRACE (258) 6 9 19 60 88 89 95 96 97 98 99 136 287
EBRACE (259) 6 9 19 60 88 89 95 96 97 98 99 136 287
COMMA (260) 21 42 66 101 106 109 139 140 150 161 285 291
EQUAL (261) 24 25 26 27 28 29 30 31 32 33 34 35 36 38 42 49 50 51 52
    53 54 55 56 68 69 73 74 75 76 77 78 79 91 104 111 112 113 114 115
    124 126 130 143 144 145 146 147 148 156 157 181 185 186 187 188
    189 190 191 192 193 194 195 196 197 198 199 201 202 203 204 206
    207 241 242 243 244 245 246 249 250 251 252 253 254 255 272 273
    274 280 281 282 289 290
COLON (262) 4 6 7 9
QUOTE (263)
SEMICOLON (264) 41 45 159 276 279
OBRACKET (265) 85 87 90 92 93 94 133
EBRACKET (266) 85 87 90 92 93 94 133
BOOTLOADER (267) 164
XIP_MODE (268) 173
EARLY_HANDOFF (269) 171
HIVEC (270) 172
LOCKSTEP (271) 179
AUTHENTICATION (272) 27 185
ENCRYPTION (273) 24 186
CHECKSUM (274) 36 187
PARTITION_OWNER (275) 188
PARTITION_TYPE (276) 55 74 146 147 201
PARTITION_NUM (277) 249
BOOT_DEVICE (278) 89 90 91
DEST_DEVICE (279) 190
DEST_CPU (280) 189
ADDRESS (281) 104
EXCEPTION_LEVEL (282) 191
TRUSTZONE (283) 180 181
ALIGNMENT (284) 241
OFFSET (285) 242
RESERVE_LEGACY (286) 243
RESERVE (287) 244
LOAD (288) 245
STARTUP (289) 246
BIGENDIAN (290) 247
A32_MODE (291) 248
PPK_SELECT (292) 272
SPK_ID (293) 198 274
SPK_SELECT (294) 197 273
HEADER_AUTH (295) 275
REVOKE_ID (296) 34 56 111 203
SPK_REVOKE_ID (297) 35 112 204
SPLIT_MODE (298) 289
SPLIT_FMT (299) 290
BOOT (300) 165
USER (301) 166
STATIC (302) 167
NOAUTOSTART (303) 168
MULTIBOOT (304) 169
PROTECTED (305) 170
BLOCKS (306) 38 156
AUTHBLOCKS (307) 157
BOOTVECTORS (308) 94
PRESIGN (309) 33 253
AC (310) 254
BIF_SECTION (311) 148
UDF_DATA (312) 255
MCS (313) 293
BIN (314) 294
SLR_NUM (315) 206
CLUSTER_NUM (316) 207
DICE (317) 131
PCR_NUMBER (318) 78
PCR_MEASUREMENT_INDEX (319) 79
IMAGE_STORE (320) 103 145
PARENT_ID (321) 50
ID_CODE (322) 51
EXT_ID_CODE (323) 52
BYPASS_IDCODE_CHECK (324) 127
A_HWROT (325) 128
S_HWROT (326) 129
UNIQUE_ID (327) 75
PARENT_UNIQUE_ID (328) 76
FUNCTION_ID (329) 77
IMAGE (330) 60
ID (331) 42 49 68 144
NAME (332) 69
DELAY_HANDOFF (333) 70
DELAY_LOAD (334) 71
COPY (335) 73
INCLUDE (336) 4 7
DELAY_AUTH (337) 209
PARTITION (338) 80
PFILE (339) 143
OPTIONAL_DATA (340) 96
METAHEADER (341) 19
TCM_BOOT (342) 210
TCM_A_REGION (343) 250
TCM_B_REGION (344) 251
TCM_C_REGION (345) 252
WORD (346) 6 9 69 148 284
HEXWORD (347) 113
FILENAME (348) 295
QFILENAME (349) 296
NONE (350) 220 222 224
DECVALUE (351) 298
HEXVALUE (352) 297
KEYSRC_ENCRYPTION (353) 25 54 85 202
FSBL_CONFIG (354) 87 88
AUTH_PARAMS (355) 92
AUTHJTAG_CONFIG (356) 95
DEVICE_DNA (357) 113
JTAG_TIMEOUT (358) 114
AUTHJTAG_SIGN (359) 115
LMS_KEY_PARAMS (360) 97 98 99
LMS_HASH (361) 280
LMS_H (362) 282
LMS_W (363) 281
SHA256 (364)
SHAKE256 (365)
PUF4KMODE (366) 123
PUFROSWAP (367) 130
SHUTTER (368) 124
SPLIT (369) 93
SMAP_WIDTH (370) 126
PUF_HELPER_FILE (371) 262
BH_KEY_FILE (372) 261
BH_KEY_IV (373) 214 263
BH_KEK_IV (374) 213
BBRAM_KEK_IV (375) 215
EFUSE_KEK_IV (376) 216
EFUSE_USER_KEK0_IV (377) 217
EFUSE_USER_KEK1_IV (378) 218
USER_KEYS (379) 219
PMCDATA (380) 147 270
BOOTIMAGE (381) 175
UDF_BH (382) 271
INIT (383) 72 174 211
PMUFW_IMAGE (384) 269
AES_KEY_FILE (385) 26 192 256
FAMILY_KEY (386) 264
PPK_FILE (387) 28 193 265
PSK_FILE (388) 29 194 266
SPK_FILE (389) 30 195 267
SSK_FILE (390) 31 196 268
SPK_SIGNATURE_FILE (391) 32 199 258
BH_SIGNATURE_FILE (392) 259
HEADER_SIGNATURE_FILE (393) 260
AUTHVALUE (394) 221
ENCRVALUE (395) 223
CHECKSUMVALUE (396) 225
POWNERVALUE (397) 226
PTYPEVALUE (398) 227
KEY_SRC (399) 228
CORE (400) 229
BH_RSA (401) 230
AUTH_HASH (402) 232
INT_HASH (403) 233
PUFHD_LOC (404) 39 208 234
OPT_KEY (405) 235
AUTH_ONLY (406) 236
BOOT_DEVICE_TYPE (407) 237
DEST_DEVICE_TYPE (408) 239
DEST_CPU_TYPE (409) 238
EXCEPTION_LEVEL_TYPE (410) 240
TRUSTZONE_TYPE (411) 181
SPLITMODE (412) 292
DPA_CM (413) 37 205 231
SPKSELECT (414) 277
HASH_FUNCTION (415) 283
AUTH_KEY_LEVEL (416) 287
OR (417) 318
XOR (418) 316
AND (419) 314
MULT (420) 304
DIVIDE (421) 305
MODULO (422) 306
PLUS (423) 301 308
MINUS (424) 309
LSHIFT (425) 311
RSHIFT (426) 312
NEGATION (427) 302
LPAREN (428) 47 48 183 184 299
RPAREN (429) 47 48 183 184 299
ASTERISK (430) 48 184


Nonterminals, with rules where they appear

$accept (176)
    on left: 0
bif (177)
    on left: 1, on right: 0
group_list (178)
    on left: 2 3, on right: 1 3
bifoptions (179)
    on left: 4 6 7 9, on right: 3
$@1 (180)
    on left: 5, on right: 6
$@2 (181)
    on left: 8, on right: 9
file_list (182)
    on left: 10 11 12 13 14 15 16 17, on right: 6 9 11 12 13 14 15
    16 17
metahdr_spec (183)
    on left: 19, on right: 14
$@3 (184)
    on left: 18, on right: 19
metahdr_attr_list (185)
    on left: 20 21 22, on right: 19 21 22
metahdr_attr (186)
    on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39, on right:
    20 21 22
optional_data (187)
    on left: 40 41, on right: 41 96
optional_data_attr (188)
    on left: 42 43, on right: 40 41
metahdr_blk (189)
    on left: 44 45, on right: 38 45
metahdr_blk_attr (190)
    on left: 46 47 48, on right: 44 45
new_pdi_spec (191)
    on left: 49 50 51 52 53 54 55 56, on right: 15
image_spec (192)
    on left: 57 58, on right: 13 58
image_list (193)
    on left: 60, on right: 57 58
$@4 (194)
    on left: 59, on right: 60
image_content (195)
    on left: 61 62 63 64, on right: 60 62 63 64
image_attributes_list (196)
    on left: 65 66 67, on right: 62 66 67
image_attributes (197)
    on left: 68 69 70 71 72 73 74 75 76 77 78 79, on right: 65 66 67
partition_spec (198)
    on left: 80 81, on right: 17 64
partition_content (199)
    on left: 82 83 84, on right: 80 81 83 84
other_spec (200)
    on left: 85 87 88 89 90 91 92 93 94 95 96 97 98 99, on right: 12
$@5 (201)
    on left: 86, on right: 87
sec_boot_attr_list (202)
    on left: 100 101, on right: 89 101
sec_boot_attr (203)
    on left: 102 103 104, on right: 100 101
fsbl_attr_list (204)
    on left: 105 106 107, on right: 87 88 106 107
authjtag_attr_list (205)
    on left: 108 109 110, on right: 95 109 110
authjtag_attr (206)
    on left: 111 112 113 114 115, on right: 108 109 110
fsbl_attr (207)
    on left: 116 117 118 119 120 121 122 123 124 125 126 127 128 129
    130 131, on right: 105 106 107
file_spec (208)
    on left: 133 134, on right: 11 63 83
$@6 (209)
    on left: 132, on right: 133
new_file_spec (210)
    on left: 136, on right: 16 84
$@7 (211)
    on left: 135, on right: 136
new_attribute_list (212)
    on left: 137 138 139 140 141 142, on right: 136 139 140 141 142
new_attribute (213)
    on left: 143 144 145 146 147 148, on right: 138 139 141
attribute_list (214)
    on left: 149 150, on right: 133 150
attribute (215)
    on left: 151 152 153 154 155, on right: 137 140 142 149 150
blocksattr_list (216)
    on left: 156 157, on right: 155
blocksattr (217)
    on left: 158 159, on right: 156 159
bootvectors_list (218)
    on left: 160 161, on right: 94 161
bootvector (219)
    on left: 162, on right: 160 161
authblockattr (220)
    on left: 163, on right: 157
boolattr (221)
    on left: 164 165 166 167 168 169 170 171 172 173 174 175 176 177
    178 179, on right: 146 151
trustzone_type (222)
    on left: 180 181, on right: 200
blockattr (223)
    on left: 182 183 184, on right: 158 159
optattr (224)
    on left: 185 186 187 188 189 190 191 192 193 194 195 196 197 198
    199 200 201 202 203 204 205 206 207 208 209 210, on right: 152
other_file_attr (225)
    on left: 211 212 213 214 215 216 217 218 219, on right: 53
authvalue (226)
    on left: 220 221, on right: 27 185
encrvalue (227)
    on left: 222 223, on right: 24 186
checkvalue (228)
    on left: 224 225, on right: 36 187
pownervalue (229)
    on left: 226, on right: 188
ptypevalue (230)
    on left: 227, on right: 55 74 178 201
key_src (231)
    on left: 228, on right: 25 54 85 202
core (232)
    on left: 229, on right: 116
bh_rsa (233)
    on left: 230, on right: 117
dpa_cm (234)
    on left: 231, on right: 125
auth_hash (235)
    on left: 232, on right: 118
int_hash (236)
    on left: 233, on right: 119
pufhd_loc (237)
    on left: 234, on right: 120
opt_key (238)
    on left: 235, on right: 122
auth_only (239)
    on left: 236, on right: 121
boot_device_type (240)
    on left: 237, on right: 90 91 102
dest_cpu_type (241)
    on left: 238, on right: 189
dest_device_type (242)
    on left: 239, on right: 190
exception_level_type (243)
    on left: 240, on right: 191
numattr (244)
    on left: 241 242 243 244 245 246 247 248 249 250 251 252, on right:
    153
fileattr (245)
    on left: 253 254 255, on right: 154
key_file (246)
    on left: 256 257 258 259 260 261 262 263 264, on right: 176 212
rsa_key_file (247)
    on left: 265 266 267 268, on right: 257
other_files (248)
    on left: 269 270 271, on right: 177
auth_parameters (249)
    on left: 272 273 274 275 276, on right: 92 276
spkselect (250)
    on left: 277, on right: 197 273
lms_params_list (251)
    on left: 278 279, on right: 97
lms_params_attr (252)
    on left: 280 281 282, on right: 278 279
hashfunc (253)
    on left: 283, on right: 280
lms_params_string_list (254)
    on left: 284 285, on right: 98 285 287
lms_params_string_type_list (255)
    on left: 287 288, on right: 99 288
$@8 (256)
    on left: 286, on right: 287
split_options (257)
    on left: 289 290 291, on right: 93 291
splitmode (258)
    on left: 292, on right: 289
splitfmt (259)
    on left: 293 294, on right: 290
filename (260)
    on left: 295 296, on right: 4 7 26 28 29 30 31 32 33 42 53 115
    133 134 143 192 193 194 195 196 199 253 254 255
number (261)
    on left: 297 298 299, on right: 300
unary_expression (262)
    on left: 300 301 302, on right: 301 302 303 304 305 306
multiplicative_expression (263)
    on left: 303 304 305 306, on right: 304 305 306 307 308 309
additive_expression (264)
    on left: 307 308 309, on right: 308 309 310 311 312
shift_expression (265)
    on left: 310 311 312, on right: 311 312 313 314
and_expression (266)
    on left: 313 314, on right: 314 315 316
xor_expression (267)
    on left: 315 316, on right: 316 317 318
expression (268)
    on left: 317 318, on right: 34 35 42 46 47 48 49 50 51 52 56 68
    73 75 76 77 78 79 104 111 112 114 124 126 130 144 145 162 163 182
    183 184 198 203 204 206 207 241 242 243 244 245 246 249 250 251
    252 272 274 281 282 299 318


State 0

    0 $accept: . bif $end

    $default  reduce using rule 2 (group_list)

    bif         go to state 1
    group_list  go to state 2


State 1

    0 $accept: bif . $end

    $end  shift, and go to state 3


State 2

    1 bif: group_list .
    3 group_list: group_list . bifoptions

    INCLUDE  shift, and go to state 4
    WORD     shift, and go to state 5

    $default  reduce using rule 1 (bif)

    bifoptions  go to state 6


State 3

    0 $accept: bif $end .

    $default  accept


State 4

    4 bifoptions: INCLUDE . COLON filename
    7           | INCLUDE . COLON filename

    COLON  shift, and go to state 7


State 5

    6 bifoptions: WORD . $@1 COLON OBRACE file_list EBRACE
    9           | WORD . $@2 COLON OBRACE file_list EBRACE

    COLON     reduce using rule 5 ($@1)
    COLON     [reduce using rule 8 ($@2)]
    $default  reduce using rule 5 ($@1)

    $@1  go to state 8
    $@2  go to state 9


State 6

    3 group_list: group_list bifoptions .

    $default  reduce using rule 3 (group_list)


State 7

    4 bifoptions: INCLUDE COLON . filename
    7           | INCLUDE COLON . filename

    FILENAME   shift, and go to state 10
    QFILENAME  shift, and go to state 11

    filename  go to state 12


State 8

    6 bifoptions: WORD $@1 . COLON OBRACE file_list EBRACE

    COLON  shift, and go to state 13


State 9

    9 bifoptions: WORD $@2 . COLON OBRACE file_list EBRACE

    COLON  shift, and go to state 14


State 10

  295 filename: FILENAME .

    $default  reduce using rule 295 (filename)


State 11

  296 filename: QFILENAME .

    $default  reduce using rule 296 (filename)


State 12

    4 bifoptions: INCLUDE COLON filename .
    7           | INCLUDE COLON filename .

    $end      reduce using rule 4 (bifoptions)
    $end      [reduce using rule 7 (bifoptions)]
    INCLUDE   reduce using rule 4 (bifoptions)
    INCLUDE   [reduce using rule 7 (bifoptions)]
    WORD      reduce using rule 4 (bifoptions)
    WORD      [reduce using rule 7 (bifoptions)]
    $default  reduce using rule 4 (bifoptions)


State 13

    6 bifoptions: WORD $@1 COLON . OBRACE file_list EBRACE

    OBRACE  shift, and go to state 15


State 14

    9 bifoptions: WORD $@2 COLON . OBRACE file_list EBRACE

    OBRACE  shift, and go to state 16


State 15

    6 bifoptions: WORD $@1 COLON OBRACE . file_list EBRACE

    $default  reduce using rule 10 (file_list)

    file_list  go to state 17


State 16

    9 bifoptions: WORD $@2 COLON OBRACE . file_list EBRACE

    $default  reduce using rule 10 (file_list)

    file_list  go to state 18


State 17

    6 bifoptions: WORD $@1 COLON OBRACE file_list . EBRACE
   11 file_list: file_list . file_spec
   12          | file_list . other_spec
   13          | file_list . image_spec
   14          | file_list . metahdr_spec
   15          | file_list . new_pdi_spec
   16          | file_list . new_file_spec
   17          | file_list . partition_spec

    OBRACE                 shift, and go to state 19
    EBRACE                 shift, and go to state 20
    OBRACKET               shift, and go to state 21
    PARTITION_TYPE         shift, and go to state 22
    BOOT_DEVICE            shift, and go to state 23
    REVOKE_ID              shift, and go to state 24
    PARENT_ID              shift, and go to state 25
    ID_CODE                shift, and go to state 26
    EXT_ID_CODE            shift, and go to state 27
    IMAGE                  shift, and go to state 28
    ID                     shift, and go to state 29
    PARTITION              shift, and go to state 30
    OPTIONAL_DATA          shift, and go to state 31
    METAHEADER             shift, and go to state 32
    FILENAME               shift, and go to state 10
    QFILENAME              shift, and go to state 11
    KEYSRC_ENCRYPTION      shift, and go to state 33
    FSBL_CONFIG            shift, and go to state 34
    AUTHJTAG_CONFIG        shift, and go to state 35
    LMS_KEY_PARAMS         shift, and go to state 36
    PUF_HELPER_FILE        shift, and go to state 37
    BH_KEY_FILE            shift, and go to state 38
    BH_KEY_IV              shift, and go to state 39
    BH_KEK_IV              shift, and go to state 40
    BBRAM_KEK_IV           shift, and go to state 41
    EFUSE_KEK_IV           shift, and go to state 42
    EFUSE_USER_KEK0_IV     shift, and go to state 43
    EFUSE_USER_KEK1_IV     shift, and go to state 44
    USER_KEYS              shift, and go to state 45
    INIT                   shift, and go to state 46
    AES_KEY_FILE           shift, and go to state 47
    FAMILY_KEY             shift, and go to state 48
    PPK_FILE               shift, and go to state 49
    PSK_FILE               shift, and go to state 50
    SPK_FILE               shift, and go to state 51
    SSK_FILE               shift, and go to state 52
    SPK_SIGNATURE_FILE     shift, and go to state 53
    BH_SIGNATURE_FILE      shift, and go to state 54
    HEADER_SIGNATURE_FILE  shift, and go to state 55
